--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chessapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chrisfon.github.io/chessp",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chess.js": "^1.0.0-beta.6",
     "chessboard": "^2.0.0",
+    "gh-pages": "^6.0.0",
     "opener": "^1.5.2",
     "react": "^18.2.0",
     "react-chess": "^1.1.1",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
