--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "chess.js": "^1.0.0-beta.6",
     "chessboard": "^2.0.0",
-    "gh-pages": "^6.0.0",
     "opener": "^1.5.2",
     "react": "^18.2.0",
     "react-chess": "^1.1.1",
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
